<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoscowTaxi</string>

    <!-- Drawable navigation -->
    <string name="navigation_personal_info">Личная информация</string>
    <string name="navigation_personal_info_change">Изменение личных данных</string>
    <string name="navigation_favorites">Избранные места</string>
    <string name="navigation_favorites_list">Список избранных мест</string>
    <string name="navigation_favorites_rides">Избранные маршруты</string>
    <string name="navigation_favorites_rides_list">Список избранных маршрутов</string>
    <string name="navigation_history_rides">История заказов</string>
    <string name="navigation_history_rides_list">Список прошлых заказов</string>
    <string name="navigation_rewards">Награды</string>
    <string name="navigation_private_rewards">Личные награды</string>

    <!-- Favorities activity-->

    <string name="favorites_places">Избранные места</string>
    <string name="favorites_route">Избранные маршруты</string>
    <string name="add_favorites_place">Добавить адрес</string>
    <string name="favorite_address">Адрес</string>
    <string name="favorite_name">Название</string>

    <!-- MAIN PAGE-->
    <string name="order">Заказать</string>
    <string name="follow">Отследить</string>
    <string name="order_data">Данные</string>
    <string name="map">Карта</string>
    <!-- page order-->
    <string name="from_here">Откуда:</string>
    <string name="where">Куда:</string>
    <!-- rage order-->

    <!-- MAIN PAGE-->

    <string name="addresses">Адреса</string>
    <string name="address">Адрес</string>

    <!-- Actions -->
    <string name="edit">Изменить</string>
    <string name="detect">Определить</string>
    <string name="remove">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="order_taxi">Заказать такси</string>
    <string name="order_now">Подать сейчас</string>
    <string name="call_operator">Позвонить оператору</string>
    <string name="clear">Очистить</string>
    <string name="time_order_taxi">Время подачи машины</string>
    <string name="my_adresses">Мои адреса</string>
    <string name="find_order">Отследить</string>


    <string name="comment">Комментарий</string>
    <string name="failed_determinate_location">Не удалось определить текущее местоположение</string>

    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="when">Время подачи:</string>
    <string name="type">Класс: </string>


    <!-- Awards -->
    <string name="beginer_award">Начинающий пассажир</string>
    <string name="intermidiate_award">Продвинутый пассажир</string>
    <string name="proffesional_award">Проффесиональный пассажир</string>
    <string name="expert_award">Эксперт</string>
    <string name="tourist_award">Путешественник</string>
    <string name="club_award">Король вечеринок</string>
    <string name="avia_award">Авиа магнат</string>
    <string name="train_award">Авиа магнат</string>
    <string name="morning_award">Ранняя пташка</string>
    <string name="night_award">Полуночник</string>

    <string name="beginer_award_description">Проехать 10 и более км</string>
    <string name="intermidiate_award_description">Проехать 100 и более км</string>
    <string name="proffesional_award_description">Проехать 250 и более км</string>
    <string name="expert_award_description">Проехать 500 и более км</string>
    <string name="tourist_award_description">10 или более раз заказать такси на вокзал или аэропорт</string>
    <string name="club_award_description">10 или более раз заказать такси из клуба или в клуб</string>
    <string name="avia_award_description">10 или более раз заказать такси из аэропорта или в аэропотр</string>
    <string name="train_award_description">10 или более раз заказать такси с вокзала или на вокзал</string>
    <string name="morning_award_description">10 или более раз заказать такси с 5 до 7 часов утра</string>
    <string name="night_award_description">10 или более раз заказать такси с 23 до 1 часов ночи</string>

    <!-- GIFTS_HYSTORY PAGE-->
    <string name="gifts">Награды</string>
    <string name="history">История</string>
    <string name="no_playservices">отсутствует приложение google play service</string>
    <string name="history_orders">Прошлые заказы</string>
    <string name="in_favorites">в избранное</string>
    <string name="your_awars">Ваши награды за использование наших услуг</string>

    <!--Internet connection -->
    <string name="error_no_internet_connection">Отсутствует интернет соединение</string>
    <string name="error_connection_occured">Возникла ошибка при отправке запроса</string>
    <string name="empty_edit_text_error">Поле не может быть пустым</string>

    <!--Internet connection error codes -->
    <string name="error_auth">Ошибка авторизации</string>
    <string name="error_application">Возникла ошибка приложения</string>
    <string name="error_sms">Возникла ошибка смс</string>

    <string name="order_number">Номер заказа</string>

    <string name="out_lenght_comment">Комментарий больше 300 символов</string>
    <!--Tariffs -->
    <string name="tariff_bussiness">Бизнесс</string>
    <string name="tariff_economi">Эконом</string>
    <string name="tariff_comfort">Комфорт</string>

    <!--Order status -->
    <string name="order_allocation">Заказ на распределении</string>
    <string name="order_free">Заказ на распределении, свободный</string>
    <string name="order_accepted">Заказ принят водителем</string>
    <string name="order_came">Водитель у клиента</string>
    <string name="order_took">Забрал клиента</string>
    <string name="order_complete">Заказ завершен</string>
    <string name="order_status">Статус заказа:</string>
    <string name="order_fail">Заказ отменен</string>
    <string name="order_send_to_driver">Заказ назначен водителю</string>
    <string name="order_wait_driver">Заказ предложен водителю (у водителя есть
    возможность не принимать заказ)</string>

    <!-- Registration -->
    <string name="register_success_sms_sended">
        Регистрация прошла успешна.На ваш номер отправлен смс-код активации.
    </string>
    <string name="wait">
        Подождите...
    </string>
   <string name="phone_hint">
        Номер телефона
    </string>
    <string name="do_registration">
        Зарегистрироваться
    </string>
    <string name="smd_code">СМС-код</string>


    <string name="log_out"><u>Выйти и сменить номер</u></string>
</resources>
