<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/addressSummary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"

        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/orange_color"
            android:text="H1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="address 2"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addressEditSummary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/favorite_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <EditText
                android:id="@+id/addressEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/favorite_address"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray_divider" />


    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="80dp"
        android:layout_height="72dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:textSize="13dp"
            android:text="@string/edit"
            android:textColor="@android:color/white"

            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detectLayout"
        android:layout_width="80dp"
        android:layout_height="72dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_get_address" />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="13dp"
            android:gravity="bottom"
            android:text="@string/detect"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray_divider" />

    <LinearLayout
        android:id="@+id/removeLayout"
        android:layout_width="80dp"
        android:layout_height="72dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textSize="13dp"
            android:text="@string/remove"
            android:textColor="@android:color/white"

            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/saveLayout"
        android:layout_width="80dp"
        android:layout_height="72dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="2dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_save" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="13dp"
            android:gravity="bottom"
            android:text="@string/save"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</LinearLayout>