<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#aaaaaaaa">

    <TextView
        android:id="@+id/txt_number_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:text="№ 234466"
        android:textColor="@color/orange_color"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/lay_data_history"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:paddingLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_number_order"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text"
                    android:text="@string/from_here" />

                <TextView
                    android:id="@+id/txt_from_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text"
                    android:text=": Минск" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text"
                    android:text="@string/where" />

                <TextView
                    android:id="@+id/txt_where"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text"
                    android:text=": Moscow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text"
                    android:text="@string/when" />

                <TextView
                    android:id="@+id/txt_time_auto"
                    android:layout_width="wrap_content"
                    android:textColor="@color/gray_text"
                    android:layout_height="wrap_content"
                    android:text=" 12 00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text"
                    android:text="@string/type" />

                <TextView
                    android:id="@+id/txt_type_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_text"
                    android:text=" Бизнесс" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_divider" />

            <FrameLayout
                android:id="@+id/lay_my_adresses_from"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_favorite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="в избранное"
                        android:textColor="@color/gray_text" />
                </LinearLayout>

                <View
                    android:id="@+id/view_but_my_adreeses_from"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>