<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/gray_divider"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_tab_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/order"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/tab_text_size" />

            <RelativeLayout
                android:id="@+id/rel_tab_indicator_order"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <View

                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:background="@color/orange_color" />

                <View

                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="top"
                    android:background="@color/orange_color" />

            </RelativeLayout>


            <View
                android:id="@+id/view_but_tab_order"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_tab_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/follow"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/tab_text_size" />

            <RelativeLayout
                android:id="@+id/rel_tab_indicator_follow"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <View

                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:background="@color/orange_color" />

                <View

                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="top"
                    android:background="@color/orange_color" />
            </RelativeLayout>


            <View
                android:id="@+id/view_but_tab_follow"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_tab_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/map"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/tab_text_size" />

            <RelativeLayout
                android:id="@+id/rel_tab_indicator_map"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <View

                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:background="@color/orange_color" />

                <View

                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="top"
                    android:background="@color/orange_color" />
            </RelativeLayout>

            <View
                android:id="@+id/view_but_tab_map"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </FrameLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>